2nd and 3rd chapter finished

--- a/thesis-main/document/BackMatter/Conclusions.tex
+++ b/thesis-main/document/BackMatter/Conclusions.tex
@@ -1,3 +1,9 @@
 \begin{conclusions}
-    Conclusiones
+    -Ninguna de las ideas implementadas fue completamente satisfactoria
+    
+    -El mejor resultado fue el de finetuning a angelina
+    
+    - Es necesario un buen poder de computo
+    
+   
 \end{conclusions}
