--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -215,4 +215,95 @@
   url     = {https://keithito.com/LJ-Speech-Dataset/}
   }
 
+@online{colab,
+  author  = {Google},
+  title   = {Google Colab},
+  url     = {https://research.google.com/colaboratory/faq.html}
+  }
+
+@online{drive,
+  author  = {Google},
+  title   = {Google Drive},
+  url     = {https://www.google.com/drive/}
+  }
+
+@online{espeak,
+  author  = {Espeak},
+  title   = {Espeak phonemizer},
+  url     = {https://github.com/bootphon/phonemizer}
+  }
+  
+@online{wav,
+  author  = {WAV},
+  title   = {WAV Audio Format},
+  url     = {https://docs.fileformat.com/audio/wav/}
+  }
+  
+@online{ibm,
+ author  = {IBM},
+ title   = {IBM},
+ url     = {https://www.ibm.com/}
+ }
+  
+@online{ibm,
+ author  = {IBM},
+ title   = {IBM},
+ url     = {https://www.ibm.com/}
+ }
+ 
+@online{microsoft,
+ author  = {Microsoft},
+ title   = {Microsoft},
+ url     = {https://www.microsoft.com/en-us/}
+ }
+ 
+@online{mos,
+ title   = {Mean Opinion Score},
+ url     = {https://telecom.altanai.com/2018/04/17/voip-call-metric-monitoring/}
+ }
+ 
+@online{mos1,
+ title   = {MOS Technology Brief - Mean Opinion Score Algorithms for Speech Quality Evaluation},
+ url     = {https://www.tek.com/en/documents/whitepaper/mos-technology-brief-mean-opinion-score-algorithms-speech-quality-evaluation}
+ }
+ 
+
+@inproceedings{beutnagel1998diphone,
+  title={Diphone synthesis using unit selection},
+  author={Beutnagel, Mark and Conkie, Alistair and Syrdal, Ann K},
+  booktitle={The Third ESCA/COCOSDA Workshop (ETRW) on Speech Synthesis},
+  year={1998}
+}
+
+@article{al2009arabic,
+  title={An Arabic text-to-speech system based on artificial neural networks},
+  author={Al-Said, Ghadeer and Abdallah, Moussa},
+  journal={Journal of Computer Science},
+  volume={5},
+  number={3},
+  pages={207},
+  year={2009}
+}
+
+@article{guzman2004sintetizador,
+  title={Sintetizador de voz para la ense{\~n}anza de la lectura a ni{\~n}os mexicanos},
+  author={Guzm{\'a}n Arreola, Mart{\'\i}n Alejandro},
+  year={2004}
+}
+
+@online{ecured,
+ title   = {Idioma Español},
+ url     = {https://www.ecured.cu/Idioma_espa%C3%B1ol}
+ }
+
+@online{cuda,
+ title   = {Pytoch CUDA},
+ url     = {https://pytorch.org/docs/stable/notes/cuda.html}
+ }
+
+@online{cuda1,
+ title   = {Pytoch CUDA},
+ url     = {https://pytorch.org/docs/stable/cuda.html}
+ }
+
 
