--- a/thesis-main/document/MainMatter/Introduction.tex
+++ b/thesis-main/document/MainMatter/Introduction.tex
@@ -4,8 +4,6 @@
 La era de la informática conversacional está cambiando la forma en la que los usuarios interactuan con sus dispositivos: el Asistente de Google busca en Internet y lee las instrucciones sobre cómo preparar un pastel, Siri guía en la búsqueda de un lugar desconocido, las líneas automatizadas de servicio al cliente operan sin necesidad de esperas o botones. Uno de los primeros problemas que alguien se plantearía es la comunicación con los dispositivos, y es que no es posible determinar de qué forma va a
 interactuar una persona con estos. Se pueden hacer aproximaciones y suposiciones, pero cada persona puede decidir operar de una forma diferente, y sería imposible que un actor de voz grabase infinitas respuestas a las ramas de conversación que pueden surgir de una simple pregunta. En este punto entra la síntesis de voz, si en vez de unas grabaciones, el dispositivo pudiese sintetizar una voz humana, podría responder y hablar con la persona, entablando una especie de conversación.\\
 
-%todo esto es posible gracias a la tecnología digital llamada texto a voz o TTS por sus siglas en inglés. \\
-
 
 La síntesis de voz es la producción artificial del habla humana. Se han diseñado diferentes sistemas para este propósito, llamados sintetizadores de voz y pueden ser implementados tanto en hardware como en software. Un sistema de conversión texto a voz (TTS, por sus siglas en inglés, \textit{text to speech}) o sintetizador de voz, recibe como datos de entrada una frase escrita y como resultado produce una voz audible que reproduce la frase de entrada . Este sistema de conversión, se compone básicamente por dos componentes: un modelo que predice generalmente en forma de espectograma, la mejor pronunciación posible de cualquier texto dado, y un codificador de voz que, a partir del espectograma anterior produce ondas sonoras de voz.\\
 
@@ -13,7 +11,7 @@ El proceso de convertir texto a voz requiere un conocimiento
 detallado en diferentes campos de la ciencia. Si se quisiera construir un sistema TTS desde cero, se tendrían que estudiar los siguientes temas:
 
 \begin{itemize}
-	\item Lingüística, el estudio científico del lenguaje. Para sintetizar un habla coherente, los sistemas TTS necesitan reconocer cómo un hablante humano pronuncia el lenguaje escrito; esto requiere conocimientos de lingüística hasta el nivel del fonema\footnote{las unidades de sonido que combinadas producen el habla, como el sonido /t/ en tierra}. Para lograr un TTS verdaderamente realista, el sistema también necesita predecir la prosodia apropiada,que incluye elementos del habla más allá del fonema, como acentos, pausas y entonación.
+	\item Lingüística, el estudio científico del lenguaje. Para sintetizar un habla coherente, los sistemas TTS necesitan reconocer cómo un hablante humano pronuncia el lenguaje escrito; esto requiere conocimientos de lingüística hasta el nivel del fonema\footnote{fonemas: Unidades de sonido que combinadas producen el habla, como el sonido /t/ en tierra}. Para lograr un TTS verdaderamente realista, el sistema también necesita predecir la prosodia apropiada,que incluye elementos del habla más allá del fonema, como acentos, pausas y entonación.
 	
 	\item Procesamiento digital de señales de voz: en el contexto de los sistemas TTS se	utilizan diferentes representaciones de características que describen la señal del habla, lo que hace posible entrenar diversos modelos para generar una nueva
 	voz.
@@ -28,13 +26,13 @@ Hasta la actualidad se han desarrollado variadas tecnologías TTS, las cuales op
 \begin{enumerate}
 	\item  Síntesis de formantes[\cite{tordera2011linguistica}][\cite{rodriguez2013sintetizador}] y síntesis articulatoria[\cite{hernandez2018sintesis}]: \\Los primeros sistemas TTS empleaban tecnologías basadas en reglas, como la síntesis de formantes y la síntesis articulatoria, que lograron resultados similares a través de estrategias ligeramente diferentes. A partir de una grabación realizada a un hablante, se extrajeron características acústicas de este: formantes, cualidades definitorias de los sonidos del habla, en síntesis de formantes; y forma de articulación (nasal, oclusiva,vocal,etc.) en síntesis articulatoria. Luego, se programarían reglas que recrearan estos parámetros con una señal de audio digital. Este TTS era bastante robótico; y estos enfoques necesariamente abstraen gran parte de la variación que se encontrará en el habla humana, aspectos como la variación de tono, porque solo permiten a los programadores escribir reglas para unos pocos parámetros a la vez.
 	
-	\item Síntesis de difonos: \\ El próximo gran desarrollo en el campo TTS se llama síntesis de difonos, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
+	\item Síntesis de difonos[\cite{beutnagel1998diphone}][\cite{al2009arabic}]: \\ El próximo gran desarrollo en el campo TTS se llama síntesis de difonos, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
 	
 	Los sistemas TTS basados en síntesis de difonos incluyen también modelos que predicen la duración y el tono de cada difono para una entrada dada, primero se conectan las señales de difono y luego se procesa esta señal para corregir el tono y la duración. El resultado es un discurso  sintético con un sonido más natural que el que crea la síntesis de formantes, pero aún está lejos de ser perfecto, y tiene pocas ventajas sobre cualquier otro acercamiento. 
 	
-	\item Síntesis de selección de unidades: \\ La síntesis de selección de unidades constituye un enfoque ideal para los motores TTS de bajo impacto en la actualidad. Cuando la síntesis de difonos añadió duración y el tono apropiado a través de un segundo sistema de procesamiento, la síntesis de selección de unidad omite ese paso: se inicia con una gran base de datos grabados del habla, alrededor de 20 horas o más, y se seleccionan los fragmentos de sonido que ya tienen la duración y el tono deseado. La síntesis de selección de unidades proporciona un habla similar a la humana sin mucha modificación de la señal, pero sigue siendo identificablemente artificial. Probablemente el audio de salida de la mejor selección de unidades, sea indistinguible de las voces humanas reales, especialmente en contextos con sistemas TTS. Sin embargo, una mayor naturalidad requiere de bases de datos de selección de unidades muy grandes, en algunos sistemas llegando a ser de gigabytes de datos grabados, representando docenas de horas de voz. 
+	\item Síntesis de selección de unidades[\cite{beutnagel1998diphone}][\cite{guzman2004sintetizador}]: \\ La síntesis de selección de unidades constituye un enfoque ideal para los motores TTS de bajo impacto en la actualidad. Cuando la síntesis de difonos añadió duración y el tono apropiado a través de un segundo sistema de procesamiento, la síntesis de selección de unidad omite ese paso: se inicia con una gran base de datos grabados del habla, alrededor de 20 horas o más, y se seleccionan los fragmentos de sonido que ya tienen la duración y el tono deseado. La síntesis de selección de unidades proporciona un habla similar a la humana sin mucha modificación de la señal, pero sigue siendo identificablemente artificial. Probablemente el audio de salida de la mejor selección de unidades, sea indistinguible de las voces humanas reales, especialmente en contextos con sistemas TTS. Sin embargo, una mayor naturalidad requiere de bases de datos de selección de unidades muy grandes, en algunos sistemas llegando a ser de gigabytes de datos grabados, representando docenas de horas de voz. 
 	
-	\item Síntesis neuronal: \\ La tecnología de las redes neuronales profundas(DNN) es la que impulsa los avances actuales en el campo TTS, y es clave para la obtención de resultados mucho más realistas. Al igual que sus predecesores, el TTS neuronal comienza con grabaciones de voz; la otra entrada es texto, el guión escrito que su locutor de origen utilizó para crear esas grabaciones. Esas entradas alimentan una red neuronal profunda y se aprende el mejor mapeo posible entre un bit de texto y las características acústicas asociadas. 
+	\item Síntesis neuronal[\cite{wang2017tacotron}][\cite{ren2019fastspeech}][\cite{lancucki2021fastpitch}]: \\ La tecnología de las redes neuronales profundas(DNN) es la que impulsa los avances actuales en el campo TTS, y es clave para la obtención de resultados mucho más realistas. Al igual que sus predecesores, el TTS neuronal comienza con grabaciones de voz; la otra entrada es texto, el guión escrito que su locutor de origen utilizó para crear esas grabaciones. Esas entradas alimentan una red neuronal profunda y se aprende el mejor mapeo posible entre un bit de texto y las características acústicas asociadas. 
 	
 	Una vez que el modelo esté entrenado, podrá predecir sonido realista para nuevos textos: con un modelo TTS neuronal entrenado, junto con un codificador de voz entrenado con los mismos datos, el sistema puede producir un habla que es notablemente similar a la del locutor de origen cuando se expone a prácticamente cualquier texto nuevo. Esa similitud entre la fuente y la salida	es la razón por la que el TTS neuronal a veces se denomina “clonación de voz”.
 	
