--- a/thesis-main/document/Thesis.tex
+++ b/thesis-main/document/Thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{xcolor}
 \usepackage{multicol}
 \usepackage{graphicx}
+\usepackage{longtable}
 
 \floatstyle{plaintop}
 \restylefloat{table}
